# limitless-hl-bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ecosystem.config.cjs  index.html  llms-full.txt  llms.txt  package-lock.json  package.json  pyproject.toml  search-index.json  sourcey.css  sourcey.js
data/: evaluation_report_strict.json
docs-source/: execution-and-orders.md  market-discovery.md  operations-and-learning.md  overview.md  risk-and-exits.md  scoring-and-signals.md  sourcey.config.ts
evidence/: evidence.json  receipt.json  report.md
limitless-hl-bot/: market-discovery.html  operations-and-learning.html  risk-and-exits.html
limitless_hl/: __init__.py  attribution.py  band_taker.py  calibrator.py  claimer.py  cli.py  clients.py  copy_shadow.py  daemon.py  ev_model.py  evaluate.py  execution.py  exiter.py  flow_recorder.py  funding_daemon.py  funding_monitor.py  gatekeeper.py  hl_info.py  http_cache.py  hyperliquid_hedge.py  learner.py  live_trade.py  maker.py  model.py  perp_momentum.py  polymarket_feed.py  report.py  risk.py  scanner.py  scorer.py  secrets.py  signal.py  tgbot.py  trade_cli.py  volatility.py
ops/: alpha_server.py
public-docs/: index.html  llms-full.txt  llms.txt  search-index.json  sitemap.xml
public-docs/limitless-hl-bot/: execution-and-orders.html  market-discovery.html  operations-and-learning.html  overview.html  risk-and-exits.html  scoring-and-signals.html
tests/: test_copy_shadow.py  test_http_cache.py  test_loops.py  test_postmortem_gates.py  test_price_gate.py
validation/: SKILL.md  X.yaml  run.mjs
(+16 files in other folders)
